--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <header>
  <nav class="top-nav">
      <ul class="nav-list">
-         <li><a href="index.html" class="nav-link">Home</a></li><li><a href="#about"    class="nav-link">About</a></li><li><a href="#portfolio" class="nav-link">My Portfolio</a></li><li><a href="#experience" class="nav-link">Experience</a></li><li><a href="#contact" class="nav-link">Contact</a></li>
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="#about" class="about">About</a></li>
+        <li><a href="#portfolio" class="portfolio">My Portfolio</a></li>
+        <li><a href="#experience" class="experience">Experience</a></li>
+        <li><a href="#contact" class="contact">Contact</a></li>
      </ul>
  </nav>
  
@@ -61,7 +65,7 @@
                             <p> 
                                 A redesign of a restaurant website from  my hometown. This project was my first website redesign utilizing my UI skills.
                             </p>
-                            <a class="View-Details" href="Pizza Shop.html">View Details</a>
+                            <a class="View-Details" href="pizza.html">View Details</a>
                         </div>
 
                 <div class="portfolio-description-text-box">
@@ -70,7 +74,7 @@
                         <p> 
                             A redesign of a fashion blog website using typography technique. This project was my second experience with UI and interaction design. 
                         </p>
-                        <a class="View-Details" href="Blog Website.html">View Details</a>
+                        <a class="View-Details" href="blog.html">View Details</a>
                     </div>
              </div>  
                 <div class="portfolio-description-text-box">
@@ -79,7 +83,7 @@
                         <p> 
                             A group project which aimed to redesign an automated system and enhance its user experience. Research, interaction, and implementation were key aspects of this assignment.
                         </p>
-                        <a class="View-Details" href="Septa System.html">View Details</a>
+                        <a class="View-Details" href="septa.html">View Details</a>
                 </div>
                 <div class="portfolio-description-text-box">
                         <h5>VyB</h5>
@@ -87,7 +91,7 @@
                         <p> 
                             Designed and developed graphics, promotional advertisements, and interfaces for the VyB Technologies mobile application and website. 
                         </p>
-                        <a class="View-Details" href="VyB.html">View Details</a>
+                        <a class="View-Details" href="vyb.html">View Details</a>
                 </div>
     </section>
 
