--- a/septa.html
+++ b/septa.html
@@ -15,6 +15,12 @@
 
 <div class="portfolio-item">
 
+<img src="images/images/septa1.jpg">
+<img src="images/images/septa2.jpg">
+<img src="images/images/septa3.jpg">
+<img src="images/images/septa4.jpg">
+<img src="images/images/septa5.jpg">
+
     <p>
         My group and I focused on redesigning the interfaces of the Septa kiosk, scanner, and phone app, along with the experience the users have when interacting with it. Through research, we discovered that users were making errors dur to inefficient signifiers that did not delineate clear functions or calls to action. Our solution involved addressing confusing language, clarifying icons and symbols, and reducing the number of clicks while maintaining a simple design.
     </p>
