--- a/VyB.html
+++ b/VyB.html
@@ -15,6 +15,12 @@
 
 <div class="portfolio-item">
 
+<img src="images/images/artboard3.jpg">
+<img src="images/images/phone2.jpg">
+<img src="images/images/artboard.jpg">
+<img src="images/images/phone.jpg">
+<img src="images/images/artboard2.jpg">
+
     <p>
         I have designed multiple grpahics and interfaces for the VyB Technologies mobile application and website including logos, icons, and screens. I have worked closely with the design and technology teams to determine what will bring the most success to the VyB brand. 
     </p>
