--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,9 @@
 
 <h1> Blog Website </h1>
 
+<img src="images/images/bloghome.jpg">
+<img src="images/images/blogarticle.jpg">
+
 <div class="portfolio-item">
 
     <p>
