--- a/VyB.html
+++ b/VyB.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VyB</title>
-    <link rel="normalize" href="../normalize.css"/>
-    <link rel="stylesheet" href="../stylesheet.css"/>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
-<div class= "back">
-            <a class="View-Details" href="./index.html" >Back</a>
-    </div>
 
 <h1> VyB </h1>
 
