--- a/blog.html
+++ b/blog.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blog Website</title>
-    <link rel="normalize" href="../normalize.css"/>
-    <link rel="stylesheet" href="../stylesheet.css"/>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
-<div class= "back">
-            <a class="View-Details" href="./index.html" >Back</a>
-    </div>
 
 <h1> Blog Website </h1>
 
-<img src="images/images/bloghome.jpg">
-<img src="images/images/blogarticle.jpg">
+<img src="images/images/mobilehome2.jpg">
+<img src="images/images/mobilearticle2.jpg">
 
 <div class="portfolio-item">
 
