--- a/septa.html
+++ b/septa.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Septa System</title>
-    <link rel="normalize" href="../normalize.css"/>
-    <link rel="stylesheet" href="../stylesheet.css"/>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
-<div class= "back">
-            <a class="View-Details" href="./index.html" >Back</a>
-    </div>
 
 <h1> Septa System </h1>
 
@@ -22,7 +19,7 @@
 <img src="images/images/septa5.jpg">
 
     <p>
-        My group and I focused on redesigning the interfaces of the Septa kiosk, scanner, and phone app, along with the experience the users have when interacting with it. Through research, we discovered that users were making errors dur to inefficient signifiers that did not delineate clear functions or calls to action. Our solution involved addressing confusing language, clarifying icons and symbols, and reducing the number of clicks while maintaining a simple design.
+        My group and I focused on redesigning the interfaces of the Septa kiosk, scanner, and phone app, along with the experience users have while interacting with it. Through research, we discovered that users were making errors due to inefficient signifiers that did not delineate clear functions or calls to action. Our solution involved addressing confusing language, clarifying icons and symbols, and reducing the number of clicks while maintaining a simple design.
     </p>
 
 </div>
