--- a/VyB.html
+++ b/VyB.html
@@ -19,7 +19,7 @@
 <img src="images/images/artboard2.jpg">
 
     <p>
-        I have designed multiple grpahics and interfaces for the VyB Technologies mobile application and website including logos, icons, and screens. I have worked closely with the design and technology teams to determine what will bring the most success to the VyB brand. 
+        I have designed multiple graphics and interfaces for the VyB Technologies mobile application and website including logos, icons, and screens. I have worked closely with the design and technology teams to determine what will bring the most success to the VyB brand. 
     </p>
 
 </div>
