--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
  <div class="landing-text">
      <h1> Devin Taylor</h1>
      <h6> UI | UX Designer </h6>
+     <img src="images/images/devin2.jpg">
  </div>
 </header>
 
@@ -33,7 +34,7 @@
                     <h1> Hi, I'm Devin! </h1>
 
                     <p> 
-                    I am a student at Drexel University studying <b> Interactive Digital Media </b> and <b> Technology Innovation.</b> I am passionate about the connection between technology and design which makes it possible for developers and designers to deliver the best possible experience for users, resulting in habit forming products. My cirriculum at Drexel University continues to strengthen my creative problem-solving skillset that I am eager to apply to the advancing technological world. I will be completing my Drexel CO-OP in Spring/Summer of 2021. Through my rigorous course of study, I aim to promote business and product growth with a consumer-centric mindset.
+                    I am a student at Drexel University studying <b> Interactive Digital Media </b> and <b> Technology Innovation.</b> I am passionate about the connection between technology and design which makes it possible for developers and designers to deliver the best possible experience for users. My cirriculum at Drexel University continues to strengthen my creative problem-solving skillset that I am eager to apply to the advancing technological world. I will be completing my Drexel CO-OP in Spring/Summer of 2021. Through my rigorous course of study, I aim to promote business and product growth with a consumer-centric mindset.
                     </p>
                 </div>
     </section>
@@ -106,7 +107,7 @@
                                 <h4> May 2019-Present </h4>
 
                                 <p>
-                                     After success in the Future Leaders Program I was asked to join VyB as Head of User Experience, responsible for User Interface and User Experience Design, Branding, and work in React Native.
+                                     After success in the Future Leaders Program I was asked to join VyB as Head of User Experience, responsible for user interface and user experience design, branding, and work in React Native.
                                 </p>
 
                                    <h3> Future Leaders Program </h3>
@@ -119,13 +120,13 @@
                                    <h4> User Experience </h4>
                                     
                                    <p> 
-                                        Created and conducted survey to prospective VyB users and business owners in order to gain critical feedback to implement VyB platform.
+                                        Created and conducted surveys to prospective VyB users and business owners in order to gain critical feedback for the success of VyB.
                                     </p>
                                    
                                    <h4> Code </h4>
 
                                     <p>
-                                        Acquired more efficient skillset for designing with Adobe applications Styling in React Native. 
+                                        Acquired more efficient skillset for designing with Adobe applications styling in React Native. 
                                     </p>     
                         </div>
             </div>  
