--- a/pizza.html
+++ b/pizza.html
@@ -15,7 +15,7 @@
 <div class="portfolio-item">
 
     <p>
-    This project was my first encounter using many important elements of website redesign. Webpage layout, color theory, graphic design, and usability were key aspects to be focused on. The overall website was in need of a modern approach to marketing their actually delicious] food. This project is compatible with a desktop. 
+    This project was my first encounter using many important elements of website redesign. Webpage layout, color theory, graphic design, and usability were key aspects to be focused on. The overall website was in need of a modern approach to marketing their actually delicious food. This project is compatible with a desktop. 
     </p>
     
 </div>
