--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <div class="landing-text">
      <h1> Devin Taylor</h1>
      <h6> UI | UX Designer </h6>
-     <img src="images/images/devin2.jpg">
+     <img src="images/images/dev.png">
  </div>
 </header>
 
