--- a/VyB.html
+++ b/VyB.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"/>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>VyB</title>
-    <link rel="stylesheet" href="normalize.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>VyB</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -12,11 +13,11 @@
 
 <div class="portfolio-item">
 
-<img src="images/images/artboard3.jpg">
-<img src="images/images/phone2.jpg">
-<img src="images/images/artboard.jpg">
-<img src="images/images/phone.jpg">
-<img src="images/images/artboard2.jpg">
+<img src="images/images/artboard3.jpg" alt="VyB Promotional Content">
+<img src="images/images/phone2.jpg" alt="VyB Interface">
+<img src="images/images/artboard.jpg" alt="VyB Promotional Content">
+<img src="images/images/phone.jpg" alt="VyB Interface">
+<img src="images/images/artboard2.jpg" alt="VyB Promotional Content">
 
     <p>
         I have designed multiple graphics and interfaces for the VyB Technologies mobile application and website including logos, icons, and screens. I have worked closely with the design and technology teams to determine what will bring the most success to the VyB brand. 
