--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en"/>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blog Website</title>
-    <link rel="stylesheet" href="normalize.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Blog Website</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <h1> Blog Website </h1>
 
-<img src="images/images/mobilehome2.jpg">
-<img src="images/images/mobilearticle2.jpg">
+<img src="images/images/mobilehome2.jpg" alt="mobile device home page">
+<img src="images/images/mobilearticle2.jpg" alt="mobile device article page">
 
 <div class="portfolio-item">
 
