--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h1>Contact</h1>
                     <h5>Let's Work Together!</h5>
                 </div>
-                <img src="images/images/dev.png">
+                <img src="images/images/dev.png" alt="Devin">
                 <form action="mailto:devinntaylor13@gmail.com" method="post" enctype="text/plain">
                     Name:<br>
                     <input type="text" name="name"><br>
