--- a/pizza.html
+++ b/pizza.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"/>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pizza Shop</title>
-   <link rel="stylesheet" href="normalize.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Pizza Shop</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <h1> Pizza Shop </h1>
 
-<img src="images/images/pizza.jpg">
+<img src="images/images/pizza.jpg" alt="pizza">
 
 <div class="portfolio-item">
 
