--- a/septa.html
+++ b/septa.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html lang="en"/>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Septa System</title>
-    <link rel="stylesheet" href="normalize.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Septa System</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
+
+<h1> Pizza Shop </h1>
+
+<img src="images/images/pizza.jpg" alt="pizza">
+
+<div class="portfolio-item">
+
+    <p>
+    This project was my first encounter using many important elements of website redesign. Webpage layout, color theory, graphic design, and usability were key aspects to be focused on. The overall website was in need of a modern approach to marketing their actually delicious food. This project is compatible with a desktop. 
+    </p>
+    
+</div>
 
 <h1> Septa System </h1>
 
 <div class="portfolio-item">
 
-<img src="images/images/septa1.jpg">
-<img src="images/images/septa2.jpg">
-<img src="images/images/septa3.jpg">
-<img src="images/images/septa4.jpg">
-<img src="images/images/septa5.jpg">
+<img src="images/images/septa1.jpg" alt="septa kiosk screen">
+<img src="images/images/septa2.jpg" alt="septa kiosk screen">
+<img src="images/images/septa3.jpg" alt="septa kiosk screen">
+<img src="images/images/septa4.jpg" alt="septa kiosk screen">
+<img src="images/images/septa5.jpg" alt="septa kiosk screen">
 
     <p>
         My group and I focused on redesigning the interfaces of the Septa kiosk, scanner, and phone app, along with the experience users have while interacting with it. Through research, we discovered that users were making errors due to inefficient signifiers that did not delineate clear functions or calls to action. Our solution involved addressing confusing language, clarifying icons and symbols, and reducing the number of clicks while maintaining a simple design.
